src/styles/nav.module.scss
@use "../styles/theme.module.scss" as Theme;
@use "../styles/mixins.scss" as Mixins;

// Nav{
// Transition rules:
// 1. img positon: absolute -> relative
// 2. menu display: none -> flex
// 3. logo link flex: 1 -> 0
// 4. menu flex: 0 -> 1
$menu-height: 100px;
$menu-button-height: 60px;
$mobile-view-reduction: 20px;
nav.sliderMenu {
  height: $menu-height;
  display: flex;
  align-items:center;
  justify-content: space-between;
  z-index: 497;
  position: fixed;
  top: 0;
  width: 100%;
  padding: 0 15px;
  contain: strict;
  @include Mixins.mediaQuery(Theme.$LgPhoneViewport) {
    top: auto;
    bottom: 0;
  }
}

button#title-menu-button {
  $marginBottom: #{calc(Theme.$boxShadowY + Theme.$boxShadowBlur / 2)}px;
  $fontSize: Theme.$h3;
  height: $menu-button-height;
  padding: 0 1em;
  margin-bottom: $marginBottom;
  font-size: $fontSize;
  z-index: 499;
  border: none;
  border-radius: Theme.$buttonRadius;
  background-color: Theme.$tertiaryCherry;
  color: Theme.$lightTertiaryCherry;
  outline: solid 2px Theme.$tertiaryCherry;
  outline-offset: -1px;
  cursor: pointer;
  transition: all 0.5s;
  &:hover {
    scale: 1.07;
    transition: all Theme.$transitionShort;
  }
  &:active {
    box-shadow: none;
    scale: 1;
  }
  @include Mixins.mediaQuery(Theme.$LgPhoneViewport) {
    height: calc($menu-button-height - $mobile-view-reduction);
    font-size: calc($fontSize - $mobile-view-reduction / 2);
    border-radius: Theme.$smallButtonRadius;
  }
}

.menu {
  background-color: Theme.$tertiaryCherry;
  height: calc($menu-button-height - Theme.$buttonRadius);
  font-size: Theme.$h3;
  width: 0;
  overflow: hidden;
  z-index: 498;
  display: flex;
  align-items: space-around;
}
.link {
  flex: 1 1 auto;
  text-align: center;
  color: Theme.$lightTertiaryCherry;
  white-space: nowrap;
}

:export{
  menuHeight: $menu-height;
  menuButtonHeight: $menu-button-height;
}

